三nginx 四阅读器开发

--- a/vue-ebook-webapp/src/assets/styles/global.less
+++ b/vue-ebook-webapp/src/assets/styles/global.less
@@ -4,7 +4,10 @@
 @import "./reset.css";
 
 // 等比例缩放
-// $ratio: 375 / 10;
-// @function px2rem($px) {
-//   @return $px / $ratio;
+// @ratio: 75;
+// .px2rem(@px) {
+//    unit(@px / @ratio);
 // }
+.rem(@name,@px) {
+  @{name}: unit(@px / 75, rem);
+}
